--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "estudos-react",
   "version": "1.0.0",
   "scripts": {
+    "start": "node src/server.js",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
